--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="Real Estate marketplace"
-      content="A marketplace to sell or rent your home"
+      name="Nedviznini Online"
+      content="Broj 1 online market za izdavanje i prodazba na nedviznini vo Makedonija"
     />
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
@@ -27,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Real Estate Marketplace</title>
+    <title>Nedviznini Online</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
