added new metadata

--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,26 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="Nedviznini Online"
-      content="Broj 1 online market za izdavanje i prodazba na nedviznini vo Makedonija"
-    />
+
+    <!-- General Metadata -->
+    <meta name="description" content="Nedviznini - Broj 1 online platforma za izdavanje i prodazba na nedviznini vo Makedonija. Pronaјdete dom ili imot denes!" />
+    <meta name="keywords" content="nedviznini, nedviznini Makedonija, izdavanje stan, prodazba kuki, nedviznini Skopje, real estate Macedonia, prodazba stanovi, iznajmuvanje stanovi" />
+    <meta name="author" content="Nedviznini" />
+
+    <!-- Twitter Metadata -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Nedviznini - Izdavanje i Prodazba na Nedviznini vo Makedonija" />
+    <meta name="twitter:description" content="Pronaјdete go svoјot nov dom ili imot so Nedviznini - vodechkata online platforma za nedviznini vo Makedonija." />
+    <meta name="twitter:image" content="https://www.nedviznini.mk/preview-image.jpg" />
+
+    <!-- Open Graph Metadata -->
+    <meta property="og:title" content="Nedviznini - Izdavanje i Prodazba na Nedviznini vo Makedonija" />
+    <meta property="og:description" content="Nedviznini e vodechka online platforma za izdavanje i prodazba na nedviznini vo Makedonija. Poglednete gi site oglasi denes!" />
+    <meta property="og:url" content="https://www.nedviznini.mk/" />
+    <meta property="og:site_name" content="Nedviznini" />
+    <meta property="og:image" content="https://www.nedviznini.mk/preview-image.jpg" />
+
+
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
      crossorigin=""/>
