Added new Metadata

--- a/public/index.html
+++ b/public/index.html
@@ -8,21 +8,21 @@
 
     <!-- General Metadata -->
     <meta name="description" content="Nedviznini - Broj 1 online platforma za izdavanje i prodazba na nedviznini vo Makedonija. Pronaјdete dom ili imot denes!" />
-    <meta name="keywords" content="nedviznini, nedviznini Makedonija, izdavanje stan, prodazba kuki, nedviznini Skopje, real estate Macedonia, prodazba stanovi, iznajmuvanje stanovi" />
-    <meta name="author" content="Nedviznini" />
+    <meta name="keywords" content="nedviznini, nedviznini Makedonija, izdavanje stan, prodazba kuki, nedviznini Skopje, Bitola, Nedviznini Bitola, Kuka, kuka, stan, bitola, skopje, prilep, kocani, Stan, Iznajmi, iznajmi, Kvadrat, square mk, square, kvadrat, prostor, deloven prostor, makedonija, mk, real estate Macedonia, prodazba stanovi, iznajmuvanje stanovi" />
+    <meta name="author" content="Filip Najdovski" />
 
     <!-- Twitter Metadata -->
-    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:card" content="%PUBLIC_URL%/logo512.png">
     <meta name="twitter:title" content="Nedviznini - Izdavanje i Prodazba na Nedviznini vo Makedonija" />
     <meta name="twitter:description" content="Pronaјdete go svoјot nov dom ili imot so Nedviznini - vodechkata online platforma za nedviznini vo Makedonija." />
-    <meta name="twitter:image" content="https://www.nedviznini.mk/preview-image.jpg" />
+    <meta name="twitter:image" content="%PUBLIC_URL%/logo192.png" />
 
     <!-- Open Graph Metadata -->
     <meta property="og:title" content="Nedviznini - Izdavanje i Prodazba na Nedviznini vo Makedonija" />
     <meta property="og:description" content="Nedviznini e vodechka online platforma za izdavanje i prodazba na nedviznini vo Makedonija. Poglednete gi site oglasi denes!" />
-    <meta property="og:url" content="https://www.nedviznini.mk/" />
+    <meta property="og:url" content="https://www.nedviznini.online/" />
     <meta property="og:site_name" content="Nedviznini" />
-    <meta property="og:image" content="https://www.nedviznini.mk/preview-image.jpg" />
+    <meta property="og:image" content="%PUBLIC_URL%/logo512.png" />
 
 
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
