fix metadata for twitter logo

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta name="author" content="Filip Najdovski" />
 
     <!-- Twitter Metadata -->
-    <meta name="twitter:card" content="%PUBLIC_URL%/logo512.png">
+    <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Nedviznini - Izdavanje i Prodazba na Nedviznini vo Makedonija" />
     <meta name="twitter:description" content="Pronaјdete go svoјot nov dom ili imot so Nedviznini - vodechkata online platforma za nedviznini vo Makedonija." />
     <meta name="twitter:image" content="%PUBLIC_URL%/logo192.png" />
