--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 
     <!-- General Metadata -->
     <meta name="description" content="Nedviznini - Broj 1 online platforma za izdavanje i prodazba na nedviznini vo Makedonija. Pronaјdete dom ili imot denes!" />
-    <meta name="keywords" content="nedviznini, nedviznini Makedonija, izdavanje stan, prodazba kuki, nedviznini Skopje, Bitola, Nedviznini Bitola, Kuka, kuka, stan, bitola, skopje, prilep, kocani, Stan, Iznajmi, iznajmi, Kvadrat, square mk, square, kvadrat, prostor, deloven prostor, makedonija, mk, real estate Macedonia, prodazba stanovi, iznajmuvanje stanovi" />
+    <meta name="keywords" content="nedviznini, nedviznini Makedonija, izdavanje stan, prodazba kuki, nedviznini Skopje, Bitola, Nedviznini Bitola, Kuka, kuka, stan, bitola, skopje, prilep, kocani, Stan, Iznajmi, iznajmi, Kvadrat, square mk, square, kvadrat, prostor, deloven prostor, makedonija, mk, real estate Macedonia, prodazba stanovi, iznajmuvanje stanovi, Дигитална агенција за недвижнини." />
     <meta name="author" content="Filip Najdovski" />
 
     <!-- Twitter Metadata -->
@@ -29,6 +29,7 @@
      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
      crossorigin=""/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="canonical" href="https://www.nedviznini.online/" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -43,7 +44,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Nedviznini Online</title>
+    <title>Nedviznini | Изнајмување и продажба на недвижнини во Македонија</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
